# dotfiles

./: .bunfig.toml  .ctags  .editorconfig  .ghci  .gitignore  .gitmodules  .stylua.toml  .styluaignore  Makefile  README.md  _poetry  arch_linux.xinitrc  conda_active.zsh  gemrc  global.astylerc  iredisrc  lldbinit.py  lldbinit_mac  mongoshrc.js  roswell.config  search_engines.json  wezterm.lua  xvimrc  zlogin  zls.json  zoxide.zsh  zprofile  zshenv  zshrc
ai-proxy/: config.json
alacritty/: alacritty.yml
anthropic-proxy/: .gitignore  config.json
applescript/: clash_direct.applescript  clash_global.applescript  clash_rule.applescript  clash_toggle.applescript  toggle_darkmode.applescript
bat/: config
btop/: btop.conf
ccproxy/: config.json
clang-format/: openbsd.clang-format
claude/: .gitignore  CLAUDE.md  Makefile  README.md  cc-statusline.sh  claude-code-settings.json  claude_desktop_config.json  edit-claude-mcp  settings.json  skills
codex/: .gitignore  AGENTS.md  Makefile  config.toml  skills
conan/: conan.conf
cursor-mcp/: llms-txt-server  mcp-server-book-search  mcp-server-fetch  mcp-server-ietf  unix-manual-mcp  unix-manual-server
dotfile_scripts/: README.md  cargo_pkgs.sh  common_pkgs.sh  docker_install.sh  docker_setup.sh  fonts.sh  helper.sh  install.sh  linux.sh  lsp_servers.sh  lua_pkgs.sh  mac.sh  mac_apps.sh  mac_defaults.sh  nvim_coc_pkgs.sh  (+1 more)
tmux/plugins/rtpm/: README.md  pyproject.toml  rtpm
tmux/plugins/rtpm/tests/: conftest.py  test_commands.py  test_config_parsing.py  test_git_ops.py  test_path_helpers.py  test_plugin_spec.py
(+525 files in other folders)
