[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtpm"
version = "0.1.0"
description = "rip-tpm: lightweight Python tmux plugin manager (TPM-compatible)"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--import-mode=importlib",
    "-v",
    "--tb=short",
]

[tool.ruff]
target-version = "py314"
line-length = 88
extend-exclude = ["tests/**/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "PTH", "SIM"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
include = ["rtpm"]
exclude = ["tests/"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
